--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "karma-typescript": "^5.2.0",
         "karma-typescript-preprocessor": "^0.4.0",
         "karma-webpack": "^4.0.2",
-        "powerbi-visuals-api": "^3.2.0",
+        "powerbi-visuals-api": "~3.2.0",
         "powerbi-visuals-tools": "^3.1.15",
         "powerbi-visuals-utils-testutils": "^2.3.3",
         "prettier": "^2.1.2",
