--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
-        "paths": { "*": ["types/*"] },
+        "paths": {
+            "*": [
+                "types/*"
+            ]
+        },
         "allowJs": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
@@ -23,5 +27,8 @@
         "removeComments": true,
         "strict": true
     },
-    "files": ["src/hierarchySlicer.ts", "test/visualTest.ts"]
+    "files": [
+        "src/hierarchySlicer.ts",
+        "test/visualTest.ts"
+    ]
 }
